update controllers and swagger
